--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,8 @@ nav .right-links {
 }
 
 nav .nav-logo {
-    width: 40px;  
-    height: 40px;
+    width: 60px;  
+    height: 60px;
     margin-right: 10px; 
     border-radius: 50%;
     box-shadow: 0 4px 12px #0e74d5; 
@@ -612,7 +612,7 @@ body.loaded .word {
     }
 
     nav ul.left-links img {
-        width: 30px; 
+        width: 60px; 
     }
 
     nav ul.right-links li {
@@ -621,6 +621,17 @@ body.loaded .word {
 
     .welcome-section h1 {
         font-size: 2.5rem; 
+    }
+
+    .welcome-section{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .welcome-image{
+        width: 150px;
     }
 
     .welcome-section p {
