--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #333;
+    background-color: black;
     padding: 10px 0;
     z-index: 1000;
     display: flex;
