--- a/styles.css
+++ b/styles.css
@@ -563,42 +563,90 @@ body.loaded .word {
 }
 
 @media (max-width: 768px) {
-    #menu-toggle {
-        display: block;
+    .icon-menu {
+        --gap: 5px;
+        --height-bar: 2.5px;
+        --pos-y-bar-one: 0;
+        --pos-y-bar-three: 0;
+        --scale-bar: 1;
+        --rotate-bar-one: 0;
+        --rotate-bar-three: 0;
+        width: 30px;
+        display: flex;
+        flex-direction: column;
+        gap: var(--gap);
+        cursor: pointer;
         position: fixed;
         top: 10px;
         left: 10px;
-        font-size: 1.5rem;
-        background: none;
-        border: none;
-        color: #0e74d5;
         z-index: 1001;
-        cursor: pointer;
+    }
+
+    .bar {
+        height: var(--height-bar);
+        width: 100%;
+        border-radius: 0.5rem;
+        background-color: #005bb5;
+    }
+
+    .bar--1 {
+        top: var(--pos-y-bar-one);
+        transform: rotate(var(--rotate-bar-one));
+        transition: top 200ms 100ms, transform 100ms;
+    }
+
+    .bar--2 {
+        transform: scaleX(var(--scale-bar));
+        transition: transform 150ms 100ms;
+    }
+
+    .bar--3 {
+        bottom: var(--pos-y-bar-three);
+        transform: rotate(var(--rotate-bar-three));
+        transition: bottom 200ms 100ms, transform 100ms;
+    }
+
+    #menu-toggle:checked + .icon-menu > .bar--1 {
+        --pos-y-bar-one: calc(var(--gap) + var(--height-bar));
+        --rotate-bar-one: 45deg;
+        transition: top 200ms, transform 200ms 100ms;
+    }
+
+    #menu-toggle:checked + .icon-menu > .bar--3 {
+        --pos-y-bar-three: calc(var(--gap) + var(--height-bar));
+        --rotate-bar-three: -45deg;
+        transition: bottom 200ms, transform 200ms 100ms;
+    }
+
+    #menu-toggle:checked + .icon-menu > .bar--2 {
+        --scale-bar: 0;
     }
 
     #mobile-nav {
-        display: none; 
+        display: none;
         flex-direction: column;
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.9); 
+        background-color: rgba(0, 0, 0, 0.95);
         padding: 20px;
         z-index: 1000;
+        justify-content: center;
+        align-items: center;
     }
 
-    #mobile-nav ul {
-        margin: 20px 0;
+    #menu-toggle:checked ~ #mobile-nav {
+        display: flex;
     }
 
     #mobile-nav a {
-        color: #fff;
+        color: #005bb5;
         font-size: 1.5rem;
-        text-align: center;
-        display: block;
+        text-decoration: none;
         margin: 10px 0;
+        text-align: center;
     }
     
     nav ul {
